configs/internal/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: http
    protocol: TCP
