configs/internal/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: mkcert
spec:
  ingressClassName: traefik
  rules:
  - host: prowlarr.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
  tls:
  - hosts:
    - prowlarr.homelab.local
    secretName: prowlarr-tls
